[tool.poetry]
name = "cursorlstm"
version = "0.1.0"
description = ""
authors = ["takumi-nishimura <clp13218@nitech.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.7.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
