[tool.poetry]
name = "cursorlstm"
version = "0.1.0"
description = ""
authors = ["takumi-nishimura <clp13218@nitech.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.7.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
python-json-logger = "^2.0.7"
stable-baselines3 = "^2.3.2"
gym = "^0.26.2"
shimmy = ">=0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
